--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 function update() {
                     for (var i = 0; i < circles.length; i++) {
-                        // TODO 4 : pull out one circle at at time from the circles Array //
+                        // TODO 4 : Access one circle at at time from the circles Array //
                         
                         
                         physikz.updatePosition(circle);
