* fix if statement formatting

--- a/.master/index.html
+++ b/.master/index.html
@@ -114,7 +114,9 @@
                             circle.x = -circle.radius;
                         } else if (circle.x < -circle.radius) {
                             circle.x = areaWidth;
-                        } if (circle.y > areaHeight) {
+                        }
+                        
+                        if (circle.y > areaHeight) {
                             circle.y = -circle.radius;
                         } else if (circle.y < -circle.radius) {
                             circle.y = areaHeight;
