--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                             // your code to place circle exactly off the stage at the left-side //
                         } else if ( / * test for left-side * / ) {
                             // your code to place circle exactly off the stage at the right-side //
-                        } if ( / * test for top * / ) {
+                        }
+                        
+                        if ( / * test for top * / ) {
                             // code to place circle exactly off the stage at the bottom //
                         } else if ( / * test for bottom * / ) {
                             // your code to place circle exactly off the stage at the top //
