--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                  * Using the count variable we can keep track of how many times we have run the loop.
                  * Here we want to run our loop 100 times to create 100 circles.
                  */
-                for (var count = 1; count <= 100; count++) {
+                for (var i = 0; i < 100; i++) {
                     // TODO 3 : YOUR CODE STARTS HERE //////////////////////////
                     
                     
