--- a/.master/index.html
+++ b/.master/index.html
@@ -64,7 +64,9 @@
                 // drawCircle();
                 // drawCircle();
                 // drawCircle();
-
+                // drawCircle();
+                // drawCircle();
+                
                 // TODO 7 : Create a Loop to call drawCircle 100 times
                 var counter = 0;
                 while (counter < 100) {
@@ -96,11 +98,15 @@
                     // physikz.updatePosition(circles[0]);
                     // physikz.updatePosition(circles[1]);
                     // physikz.updatePosition(circles[2]);
+                    // physikz.updatePosition(circles[3]);
+                    // physikz.updatePosition(circles[4]);
                         
                     // TODO 6 : Call checkCircleBounds on your circles.
                     // checkCircleBounds(circles[0]);
                     // checkCircleBounds(circles[1]);
                     // checkCircleBounds(circles[2]);
+                    // checkCircleBounds(circles[3]);
+                    // checkCircleBounds(circles[4]);
 
                     // TODO 8 : Iterate over the array
                     for (var i = 0; i < circles.length; i++) {
